Fixed image overflow bug

--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -2,6 +2,10 @@ body {
 	overflow-x:hidden;
 }
 
+img {
+	max-width: 100%;
+}
+
 #header {
 	width:100%;
 }
